--- a/index.ipynb
+++ b/index.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "from {{lib_path}}.core import *"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,7 +13,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "This file will become your README and also the index of your documentation.\n",
+    "\n",
+    "Let's test images now:\n",
+    "\n",
+    "![cat](./images/cat.jpg)"
    ]
   },
   {
