--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Let's test images now:\n",
     "\n",
-    "![cat](./images/cat.jpg)"
+    "![cat](images/cat.jpg)"
    ]
   },
   {
@@ -153,13 +153,6 @@
    "source": [
     "1+1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
