--- a/nbs/check.ipynb
+++ b/nbs/check.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check\n",
+    "\n",
+    "A little utility to run `pyflakes` on the output code to prevent broken code from being shipped to production"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
