--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# nbdev dev flow\n",
+    "# nbdev dev flow: recs and gotchas\n",
     "\n",
-    "> documenting workflow around nbdev with\n",
+    "> documenting workflow around nbdev\n",
     "\n",
-    "similar stories here: https://forums.fast.ai/t/nbdev-a-few-things-tricks-i-learned-by-trial-error/102220/14"
+    "There are some similar stories/concerns expressed [here](https://forums.fast.ai/t/nbdev-a-few-things-tricks-i-learned-by-trial-error/102220/14)"
    ]
   },
   {
@@ -141,17 +141,6 @@
     "nbdev.nbdev_export()\n",
     "check()\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file will become your README and also the index of your documentation.\n",
-    "\n",
-    "Let's test images now:\n",
-    "\n",
-    "![cat](images/cat.jpg)"
    ]
   },
   {
