--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# nbdev dev flow: recs and gotchas\n",
     "\n",
-    "> documenting workflow around nbdev\n",
-    "\n",
-    "There are some similar stories/concerns expressed [here](https://forums.fast.ai/t/nbdev-a-few-things-tricks-i-learned-by-trial-error/102220/14)"
+    "> documenting workflow around nbdev. There are some similar stories/concerns expressed [here](https://forums.fast.ai/t/nbdev-a-few-things-tricks-i-learned-by-trial-error/102220/14)"
    ]
   },
   {
