add note regarding pyflakes

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -138,7 +138,12 @@
     "\n",
     "nbdev.nbdev_export()\n",
     "check()\n",
-    "```"
+    "```\n",
+    "\n",
+    "### Comment from Jeremy Howard regarding pyflakes usage\n",
+    "\n",
+    "> Instead of using pyflakes, I recommend having your index.ipynb show examples of how to use all modules defined in your lib. If any of them aren't working, nbdev_prepare will tell you so. pyflakes is fine, but it's not a substitute for proper tests. And if you have proper tests, then you don't need pyflakes here!\n",
+    "That's why nbdev comes with CI enabled OOTB -- to help ensure you've got working tests"
    ]
   },
   {
